# pocc

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  agent_bootstrap.sh  genesis.toml  ignite_production_matrix.sh  line_end_flash.sh
.github/ISSUE_TEMPLATE/: lprfc_template.md
.github/workflows/: life-agent-sdk-publish.yml  planetary_build.yml
0_kinetic_trust_root/: Cargo.toml
0_kinetic_trust_root/pokw_firmware/: build.zig
0_kinetic_trust_root/pokw_firmware/src/: main.zig  pokw_generator.zig
0_kinetic_trust_root/pote_thermal_sensor/: landauer_exhaust.zig  pokw_generator.zig
0_kinetic_trust_root/src/: aegis_interceptor.rs  did_genesis.rs  lib.rs  tunnel_daemon.rs
1_ahin_nervous_system/src/: cr_plus_gravity.rs  dns_dht_bridge.rs  geo_spatial_dht.rs  macro_economic_controller.rs  pokw_bridge.rs  slasher_daemon.rs  swarm_simulator.rs  swarm_x402_simulator.rs
2.5_pocc_collaboration_mesh/: Dockerfile  requirements.txt  swarm_joint_htlc.rs
2.5_pocc_collaboration_mesh/optimistic_swarm_kinematics/: README.md
2.5_pocc_collaboration_mesh/quantumlink_bridge/: README.md  unified_acceleration_bridge.cpp
2.5_pocc_collaboration_mesh/tensor_telepathy_engine/: README.md
2_ahin_nervous_system/: Dockerfile  cross_domain_anchor.rs  orbital_ghost_witness.rs
2_ahin_nervous_system/cr_plus_tensor_routing/: Cargo.toml  README.md
2_ahin_nervous_system/cr_plus_tensor_routing/src/: caas_registry.rs  eclipse_monitor.rs  global_blacklist_gossip.rs  gravity_engine.rs  grpc_python.rs  main.rs  siwa.rs  solana_ledger.rs  solana_rpc_pool.rs  tee_enclave.rs  universal_orchestrator.rs
2_pocc_collaboration_mesh/: cognitive_canxian_consensus.py  requirements.txt
3_cai_cognitive_cortex/: emotional_entropy_sink.py  semantic_zkml_breaker.py
3_cai_cognitive_cortex/strix_halo_xdna_accelerator/: README.md  StrixHalo_XDNA_Accelerator.cpp
3_thermodynamic_ledger/scripts/: force_genesis_buy_in.ts
4_ap2_universal_gateway/amd_halo_plugin/: CMakeLists.txt
4_ap2_universal_gateway/amd_halo_plugin/src/: StrixHalo_XDNA_Accelerator.cpp  bridge_ffi.cpp  xdna_amd_bridge.cpp
4_ap2_universal_gateway/src/: erc8004_identity_sync.rs  x402_lightning_channel.rs
4_thermodynamic_ledger/: htlc_retrospective_court.py  proof_of_solace.py  proof_of_thermal_exhaust.py  singularity_legacy_protocol.py  spl_staking_settlement.py
5_planetary_omnisphere/: embodied_optimism.py
5_quorum_appchain/: docker-compose.yml
5_quorum_appchain/contracts/: LifePlus_DarkPool_Settlement.sol
6_planetary_defense/: macro_causal_tensor.py  prometheus_override.py  prometheus_override_v2.py
7_koala_os_frontend/: .env.example  App.tsx  Dockerfile  index.html  index.tsx  package-lock.json  package.json  tsconfig.json  vite.config.ts
7_koala_os_frontend/components/: CogFi_MacroRadar.tsx  HoloGlobe.tsx  HolographicMap.tsx  KoalaOS_Dashboard.tsx  LifePlusWallet.tsx
7_koala_os_frontend/hooks/: useOmnisphere.ts
7_koala_os_frontend/routes/: cogfiRadarRoute.tsx  earthTwinRoute.tsx  holoGlobeRoute.tsx  holographicMapRoute.tsx  index.ts  koalaDashboardRoute.tsx  lifePlusWalletRoute.tsx
7_koala_os_frontend/src/: App.tsx  main.tsx
7_koala_os_frontend/types/: env.d.ts
7_koala_os_frontend/workers/: telemetryWorker.ts
8_quorum_settlement/: README.md
agent-sdk/: mlx_consensus_engine.py  package.json  tsconfig.json
ahin-node/: Cargo.toml
ahin_cr_plus_node/: Cargo.toml  test_bomb.py
crates/agent-wallet-vault/: Cargo.toml
crates/agent-wallet-vault/src/: audit.rs  auth.rs  lib.rs  vault.rs  zk_commitment.rs
crates/cis-genesis-provisioner/: Cargo.toml
crates/cis-genesis-provisioner/src/: crypto.rs  hardware.rs  lib.rs  main.rs  manifest.rs  provisioner.rs
crates/governance-and-rwa/: Cargo.toml
crates/governance-and-rwa/src/: lib.rs
crates/governance-and-rwa/src/payfi/: mod.rs
crates/governance-and-rwa/src/rwa/: mod.rs
crates/governance-and-rwa/src/slasher/: mod.rs
crates/openclaw-edge-runtime/: Cargo.toml
crates/openclaw-edge-runtime/src/: adaptive_pricer.rs  byteme_scheduler.rs  lib.rs
crates/openclaw-edge-runtime/src/engine/: mod.rs
crates/openclaw-edge-runtime/src/kinetic/: mod.rs
crates/openclaw-edge-runtime/src/market/: mod.rs
crates/openclaw-edge-runtime/src/world_model/: mod.rs
crates/pocc-collaboration-protocol/: Cargo.toml
crates/pocc-collaboration-protocol/src/: lib.rs  merkle.rs
crates/pocc-collaboration-protocol/src/ctx_composer/: mod.rs
crates/pocc-collaboration-protocol/src/orchestrator/: mod.rs
crates/pocc-collaboration-protocol/src/telemetry/: mod.rs
crates/pocc-collaboration-protocol/src/zk_prover/: mod.rs
crates/pocc-collaboration-protocol/tests/: swarm_simulator.rs
crates/silicon-economy-layer/: Cargo.toml
crates/silicon-economy-layer/src/: lib.rs
crates/silicon-economy-layer/src/identity/: mod.rs
crates/silicon-economy-layer/src/intent_mandate/: mod.rs
crates/silicon-economy-layer/src/lightning/: mod.rs
crates/silicon-economy-layer/src/netting/: mod.rs
crates/tee-foundation/: Cargo.toml
crates/tee-foundation/src/: attestation.rs  lib.rs  measurement.rs  sealed_storage.rs
docs/: architecture_manifesto.md  ecosystem_reuse_analysis.md  hell_level_good_first_issues_zh.md  kardashev_type1_scaling_blueprint_zh.md  lifeplusplus_planetary_engineering_blueprint_zh.md  lifeplusplus_purple_paper.md  lifeplusplus_yellow_paper.md  main.tex  openclaw_global_agent_initiative.md  planetary_core_index.md  planetary_monorepo_index.md  promethean_spark_announcement_zh.md  quantumlink_polymorphic_cognitive_engine.md
erc8004-identity-registry/: README.md
openclaw-runtime/: Cargo.toml  build.rs
openclaw-runtime/openclaw-tensor/: CMakeLists.txt
openclaw-runtime/openclaw-tensor/src/: mlx_apple_bridge.cpp  tensor_engine.cpp  xdna_amd_bridge.cpp
programs/lifeplus_core/: Cargo.toml
programs/lifeplus_core/src/: cogfi_credit_slasher.rs  composite_ctx_settlement.rs  daily_netting_clearing.rs  errors.rs  lib.rs  pocc_structural_verifier.rs  state.rs  zk_arbitration_court.rs
zk_compressor/: README.md
(+79 files in other folders)
