[workspace]
members = [
    "crates/tee-foundation",
    "crates/openclaw-edge-runtime",
    "crates/ahin-nervous-system",
    "crates/pocc-collaboration-protocol",
    "crates/silicon-economy-layer",
    "crates/governance-and-rwa",
    "crates/bitcoin-ln-bridge",
    "crates/pocc-market",
    "crates/cis-genesis-provisioner",
    "crates/agent-wallet-vault",
]
exclude = [
    "2_ahin_nervous_system/cr_plus_tensor_routing",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["poccahin"]
