[package]
name = "kinetic_trust_root"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
futures = "0.3"
libp2p = { version = "0.56", features = ["tokio", "tcp", "noise", "yamux"] }
libp2p-stream = "0.4.0-alpha"
tokio = { version = "1", features = ["full", "sync"] }
tokio-util = { version = "0.7", features = ["compat"] }
