[package]
name = "cr_plus_tensor_routing"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
tonic = { version = "0.11", features = ["transport"] }
solana-client = "1.16"
solana-sdk = "1.16"
spl-token = "4.0"
spl-token-legacy = { package = "spl-token", version = "3.5" }
bincode = "1.3"
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
